k8s-playground/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app: immich
    environment: playground
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
