k8s-playground/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
  labels:
    app: immich
spec:
  type: NodePort
  selector:
    app: immich
  ports:
    - name: http
      protocol: TCP
      port: 2283
      targetPort: 2283
      nodePort: 32283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-db
  namespace: immich
  labels:
    app: immich-db
spec:
  type: ClusterIP
  selector:
    app: immich-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
  labels:
    app: immich-redis
spec:
  type: ClusterIP
  selector:
    app: immich-redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
